git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/ARQ/trunk@1121785 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
       <groupId>com.hp.hpl.jena</groupId>
       <artifactId>jenatest</artifactId>
       <version>2.6.0</version>
+      <scope>test</scope>
     </dependency>
 
     <dependency>
