Fixed repo names to avoid duplicates ids.
git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-CVS/jena2/trunk@1113909 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -373,7 +373,7 @@
     <!-- jena-repo is mirrored to Maven central repository -->
     <!--
     <repository>
-      <id>jena-repo</id>
+      <id>repo-jena</id>
       <name>Jena Maven - Repository</name>
       <layout>default</layout>
       <url>http://jena.hpl.hp.com/repo</url>
@@ -384,7 +384,7 @@
     -->
     <!-- jena-repo-dev is where SNAPSHOTs are published -->  
     <repository>
-      <id>jena-repo-dev</id>
+      <id>repo-jena-dev</id>
       <name>Jena Maven - Development Repository</name>
       <layout>default</layout>
       <url>http://jena.hpl.hp.com/repo-dev</url>
