--- a/log4j.properties
+++ b/log4j.properties
@@ -1,14 +1,23 @@
 log4j.rootLogger=WARN, stdout
 
+## Stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 ##log4j.appender.stdout.layout.ConversionPattern=%d{HH:mm:ss} %-5p %-15c{1} :: %m%n
 log4j.appender.stdout.layout.ConversionPattern=%-5p %-15c{1} :: %m%n
 
+## Stderr
 log4j.appender.stderr=org.apache.log4j.ConsoleAppender
 log4j.appender.stderr.target=System.err
 log4j.appender.stderr.layout=org.apache.log4j.PatternLayout
 log4j.appender.stderr.layout.ConversionPattern=%d{HH:mm:ss} %-5p %-15c{1} :: %m%n
+
+## File logger for "explain"
+## File
+## log4j.appender.explain=org.apache.log4j.FileAppender
+## log4j.appender.explain.File=tdb-execution.log
+## log4j.appender.explain.layout=org.apache.log4j.PatternLayout
+## log4j.appender.explain.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} --------%n%m%n
 
 # Jena
 log4j.logger.com.hp.hpl.jena=WARN
@@ -26,8 +35,9 @@ log4j.logger.com.hp.hpl.jena.tdb=INFO
 log4j.logger.com.hp.hpl.jena.tdb.info=INFO
 
 ## Logger for execution details.
-## Need to switch on with the dynamic switch 
-## "TDB.setExecutionLogging(true)" as well.
+## **  Need to switch on with the dynamic switch 
+## **  "TDB.setExecutionLogging(true)" as well.
+## log4j.logger.com.hp.hpl.jena.tdb.exec=INFO, explain
 log4j.logger.com.hp.hpl.jena.tdb.exec=INFO
 
 #log4j.logger.com.hp.hpl.jena.tdb.base.block.BlockMgrCache=DEBUG
