--- a/log4j.properties
+++ b/log4j.properties
@@ -17,7 +17,7 @@ log4j.appender.stderr.layout.ConversionPattern=%d{HH:mm:ss} %-5p %-15c{1} :: %m%
 ## log4j.appender.explain=org.apache.log4j.FileAppender
 ## log4j.appender.explain.File=tdb-execution.log
 ## log4j.appender.explain.layout=org.apache.log4j.PatternLayout
-## log4j.appender.explain.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} --------%n%m%n
+## log4j.appender.explain.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} :: %m%n
 
 # Jena
 log4j.logger.com.hp.hpl.jena=WARN
