--- a/.classpath
+++ b/.classpath
@@ -12,7 +12,7 @@
 	<classpathentry kind="lib" path="lib/wstx-asl-3.2.9.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
 	<classpathentry kind="lib" path="lib/arq-2.8.0-tests.jar" sourcepath="arq-2.8.0-test-sources.jar"/>
-	<classpathentry kind="lib" path="lib/arq-2.8.0.jar" sourcepath="arq-2.8.0-sources.jar"/>
+	<classpathentry kind="lib" path="lib/arq-2.8.0.jar" sourcepath="lib/arq-2.8.0-sources.jar"/>
 	<classpathentry kind="lib" path="lib/icu4j-3.4.4.jar"/>
 	<classpathentry kind="lib" path="lib/iri-0.7.jar"/>
 	<classpathentry kind="lib" path="lib/log4j-1.2.14.jar"/>
