--- a/ivy.xml
+++ b/ivy.xml
@@ -28,7 +28,7 @@
     <!-- rev="latest.integration" -->
     
     <!-- We need the "tests" classifier but so we need to name all the bits we want. -->
-    <dependency org="com.hp.hpl.jena" name="arq" rev="2.8.0">
+    <dependency org="com.hp.hpl.jena" name="arq" rev="latest.integration">
       <artifact name="arq"/>
       <artifact name="arq" mvn:classifier="tests"/>
       <artifact name="arq" mvn:classifier="javadoc"/>
