--- a/.classpath
+++ b/.classpath
@@ -19,7 +19,7 @@
 	<classpathentry kind="lib" path="lib/jenatest-2.6.0.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-api-1.5.8.jar" sourcepath="lib/slf4j-api-1.5.8-sources.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-log4j12-1.5.8.jar" sourcepath="lib/slf4j-log4j12-1.5.8-sources.jar"/>
-	<classpathentry kind="lib" path="lib/arq-2.8.1-SHAPSHOT-tests.jar" sourcepath="lib/arq-2.8.1-SHAPSHOT-test-sources.jar"/>
-	<classpathentry kind="lib" path="lib/arq-2.8.1-SHAPSHOT.jar" sourcepath="lib/arq-2.8.1-SHAPSHOT-sources.jar"/>
+	<classpathentry kind="lib" path="lib/arq-2.8.1-SNAPSHOT.jar" sourcepath="lib/arq-2.8.1-SNAPSHOT-sources.jar"/>
+	<classpathentry kind="lib" path="lib/arq-2.8.1-SNAPSHOT-tests.jar" sourcepath="lib/arq-2.8.1-SNAPSHOT-test-sources.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
