--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <artifactId>arq</artifactId>
   <packaging>jar</packaging>
   <name>ARQ</name>
-  <version>2.8.1-SHAPSHOT</version>
+  <version>2.8.1-SNAPSHOT</version>
   <description/>
   <url>http://jena.sf.net/ARQ</url>
 
@@ -306,6 +306,7 @@ build.time.txt=${build.time.txt}
 
   <distributionManagement>
     <downloadUrl>http://jena.hpl.hp.com/repo-dev</downloadUrl>
+
     <repository>
       <id>jena-repo</id>
       <name>Jena repo</name>
@@ -315,6 +316,7 @@ build.time.txt=${build.time.txt}
       <!--<url>file:tmp</url>-->
       <layout>default</layout>
     </repository> 
+
     <snapshotRepository>
       <id>jena-repo-dev</id>
       <name>Jena development repo</name>
@@ -322,6 +324,7 @@ build.time.txt=${build.time.txt}
       <!--<url>file:tmp</url>-->
       <layout>default</layout>
     </snapshotRepository>
+
   </distributionManagement>
 
 </project>
