--- a/pom.xml
+++ b/pom.xml
@@ -48,12 +48,12 @@
     <dependency>
       <groupId>com.hp.hpl.jena</groupId>
       <artifactId>arq</artifactId>
-      <version>2.8.0</version>
+      <version>2.8.1-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>com.hp.hpl.jena</groupId>
       <artifactId>arq</artifactId>
-      <version>2.8.0</version>
+      <version>2.8.1-SNAPSHOT</version>
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
@@ -241,6 +241,17 @@ build.time.txt=${build.time.txt}
           </execution>
           <!-- Another task, another execution -->
         </executions>
+      </plugin>
+
+      <plugin>
+	<groupId>org.apache.maven.plugins</groupId>
+	<artifactId>maven-dependency-plugin</artifactId>
+	<configuration>
+	  <outputDirectory>lib2</outputDirectory>
+	  <overWriteReleases>false</overWriteReleases>
+          <overWriteSnapshots>false</overWriteSnapshots>
+	  <overWriteIfNewer>true</overWriteIfNewer>
+	</configuration>
       </plugin>
 
     </plugins>
