--- a/.classpath
+++ b/.classpath
@@ -4,7 +4,6 @@
 	<classpathentry kind="src" path="src-examples"/>
 	<classpathentry kind="src" path="src-test"/>
 	<classpathentry kind="src" path="src-dev"/>
-	<classpathentry kind="lib" path="lib/jena.jar" sourcepath="jena-src.zip"/>
 	<classpathentry kind="lib" path="lib/log4j-1.2.12.jar"/>
 	<classpathentry kind="lib" path="lib/xercesImpl.jar"/>
 	<classpathentry kind="lib" path="lib/lucene-core-2.3.1.jar"/>
@@ -16,5 +15,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
 	<classpathentry kind="lib" path="lib/icu4j-3.4.4.jar"/>
 	<classpathentry kind="lib" path="lib/iri-0.7.jar"/>
+	<classpathentry kind="lib" path="lib/jena-2.6.2-RC-1.jar"/>
+	<classpathentry kind="lib" path="lib/jena-2.6.2-RC-1-tests.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
