--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <artifactId>arq</artifactId>
   <packaging>jar</packaging>
   <name>ARQ</name>
-  <version>2.8.1-SNAPSHOT</version>
+  <version>2.8.1-RC-1</version>
   <description/>
   <url>http://jena.sf.net/ARQ</url>
 
@@ -36,6 +36,21 @@
     <dependency>
       <groupId>com.hp.hpl.jena</groupId>
       <artifactId>jena</artifactId>
+      <version>2.6.2-RC-1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.hp.hpl.jena</groupId>
+      <artifactId>jena</artifactId>
+      <type>test-jar</type>
+      <version>2.6.2-RC-1</version>
+      <scope>test</scope>
+    </dependency>
+
+    <!-- Jena pre 2.6.2
+    <dependency>
+      <groupId>com.hp.hpl.jena</groupId>
+      <artifactId>jena</artifactId>
       <version>2.6.0</version>
     </dependency>
 
@@ -45,6 +60,8 @@
       <version>2.6.0</version>
       <scope>test</scope>
     </dependency>
+    -->
+
 
     <dependency>
       <groupId>org.codehaus.woodstox</groupId>
@@ -292,14 +309,16 @@ build.time.txt=${build.time.txt}
     -->
   </reporting>
 
-  <repositories>
+ <repositories>
+    <!-- jena-repo is mirrored to Maven central repository -->
+    <!-- jena-repo-dev is where SNAPSHOTs and RCs are published -->  
     <repository>
-      <id>repo-jena-repo</id>
+      <id>repo-jena-dev</id>
       <name>Jena Maven - Development Repository</name>
       <layout>default</layout>
       <url>http://jena.hpl.hp.com/repo-dev</url>
       <snapshots>
-	<enabled>true</enabled>
+        <enabled>true</enabled>
       </snapshots>
     </repository>
   </repositories>
@@ -310,9 +329,9 @@ build.time.txt=${build.time.txt}
     <repository>
       <id>jena-repo</id>
       <name>Jena repo</name>
-      <url>sftp://jena.hpl.hp.com/var/repo</url>
+      <!--<url>sftp://jena.hpl.hp.com/var/repo</url>-->
       <!-- Because RC's aren't snapshots -->
-      <!--<url>sftp://jena.hpl.hp.com/var/repo-dev</url> -->
+      <url>sftp://jena.hpl.hp.com/var/repo-dev</url>
       <!--<url>file:tmp</url>-->
       <layout>default</layout>
     </repository> 
