--- a/.classpath
+++ b/.classpath
@@ -15,11 +15,11 @@
 	<classpathentry kind="lib" path="lib/iri-0.7.jar"/>
 	<classpathentry kind="lib" path="lib/log4j-1.2.14.jar"/>
 	<classpathentry kind="lib" path="lib/xercesImpl-2.7.1.jar"/>
-	<classpathentry kind="lib" path="lib/jena-2.6.0.jar" sourcepath="lib/jena-2.6.0-sources.jar"/>
-	<classpathentry kind="lib" path="lib/jenatest-2.6.0.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-api-1.5.8.jar" sourcepath="lib/slf4j-api-1.5.8-sources.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-log4j12-1.5.8.jar" sourcepath="lib/slf4j-log4j12-1.5.8-sources.jar"/>
-	<classpathentry kind="lib" path="lib/arq-2.8.1-SNAPSHOT.jar" sourcepath="lib/arq-2.8.1-SNAPSHOT-sources.jar"/>
-	<classpathentry kind="lib" path="lib/arq-2.8.1-SNAPSHOT-tests.jar" sourcepath="lib/arq-2.8.1-SNAPSHOT-test-sources.jar"/>
+	<classpathentry kind="lib" path="lib/arq-2.8.1-RC-1-tests.jar"/>
+	<classpathentry kind="lib" path="lib/arq-2.8.1-RC-1.jar"/>
+	<classpathentry kind="lib" path="lib/jena-2.6.2-RC-1-tests.jar"/>
+	<classpathentry kind="lib" path="lib/jena-2.6.2-RC-1.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
