--- a/ivysettings.properties
+++ b/ivysettings.properties
@@ -1,4 +1,3 @@
 # Java properties for Ivy
-
-tdb.organisation=com.hp.hpl.jena
+# See ivysettings.xml -- seem to be able to have one or the other, not both.
 # Set in build.xml tdb.version=
