--- a/pom.xml
+++ b/pom.xml
@@ -5,20 +5,13 @@
 >
   <modelVersion>4.0.0</modelVersion>
 
-  <properties>
-    <version-major>2</version-major>
-    <version-minor>6</version-minor>
-    <version-revision>2</version-revision>
-    <version-status>-RC-1</version-status>
-  </properties>
-
   <groupId>com.hp.hpl.jena</groupId>
   <artifactId>jena</artifactId>
-  <version>${version-major}.${version-minor}.${version-revision}${version-status}</version>
+  <version>2.6.2-RC-2</version>
   <packaging>jar</packaging>
 
   <name>Jena</name>
-  <url>http://jena.sourceforge.net/</url>
+  <url>http://www.openjena.org/</url>
   <inceptionYear>2000</inceptionYear>
   <description>Jena is a Java framework for building Semantic Web applications. It provides a programmatic environment for RDF, RDFS and OWL, SPARQL and includes a rule-based inference engine.</description>
 
@@ -38,15 +31,15 @@
   </scm>
 
   <organization>
-    <name>HP Labs</name>
-    <url>http://www.hpl.hp.com/semweb/</url>
+    <name>The Jena Project</name>
+    <url>http://www.openjena.org/</url>
   </organization>
   
    <dependencies>
     <dependency>
       <groupId>com.hp.hpl.jena</groupId>
       <artifactId>arq</artifactId>
-      <version>2.8.0</version>
+      <version>2.8.1</version>
       <scope>runtime</scope>
     </dependency>
 
@@ -233,10 +226,6 @@
                   <filterset>
                     <filter token="NAME" value="${project.name}"/>
                     <filter token="WEBSITE" value="${project.url}"/>
-                    <filter token="VERSION-MAJOR" value="${version-major}"/>
-                    <filter token="VERSION-MINOR" value="${version-minor}"/>
-                    <filter token="VERSION-REVISION" value="${version-revision}"/>
-                    <filter token="VERSION-STATUS" value="${version-status}"/>
                     <filter token="VERSION" value="${project.version}"/>
                     <filter token="BUILD_TIME_XSD" value="${build-time}"/>
                   </filterset>
@@ -345,52 +334,6 @@
   
   </reporting>
 
-  <repositories>
-    <!-- jena-repo is mirrored to Maven central repository -->
-    <!--
-    <repository>
-      <id>repo-jena</id>
-      <name>Jena Maven - Repository</name>
-      <layout>default</layout>
-      <url>http://jena.hpl.hp.com/repo</url>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-    </repository>
-    -->
-    <!-- jena-repo-dev is where SNAPSHOTs are published -->  
-    <repository>
-      <id>repo-jena-dev</id>
-      <name>Jena Maven - Development Repository</name>
-      <layout>default</layout>
-      <url>http://jena.hpl.hp.com/repo-dev</url>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-    </repository>
-  </repositories>
-
-  <distributionManagement>
-    <!-- <downloadUrl>http://jena.hpl.hp.com/repo-dev</downloadUrl> -->
-    <repository>
-      <id>jena-repo</id>
-      <name>Jena repo</name>
-      <!-- scp does not work (TERM not set !!) -->
-      <!-- <url>sftp://jena.hpl.hp.com/var/repo</url> -->
-      <!-- RC's to snapshot repo -->
-      <url>sftp://jena.hpl.hp.com/var/repo-dev</url>
-      <!-- <url>file:tmp</url> -->
-      <layout>default</layout>
-    </repository> 
-    <snapshotRepository>
-      <id>jena-repo-dev</id>
-      <name>Jena development repo</name>
-      <url>sftp://jena.hpl.hp.com/var/repo-dev</url>
-      <!--<url>file:tmp</url>-->
-      <layout>default</layout>
-    </snapshotRepository>
-  </distributionManagement>
-
   <profiles>
 
     <profile>
@@ -424,5 +367,52 @@
     </profile>
 
   </profiles>
+
+  <repositories>
+    <!-- repo-jena is mirrored to Maven central repository -->
+    <!--
+    <repository>
+      <id>repo-jena</id>
+      <name>Jena Maven - Repository</name>
+      <layout>default</layout>
+      <url>http://openjena.org/repo</url>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
+    -->
+    <!-- repo-jena-dev is where SNAPSHOTs are published -->  
+    <repository>
+      <id>repo-jena-dev</id>
+      <name>Jena Maven - Development Repository</name>
+      <layout>default</layout>
+      <url>http://openjena.org/repo-dev</url>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
+
+  <distributionManagement>
+    <!-- <downloadUrl>http://openjena.org/repo-dev</downloadUrl> -->
+    <repository>
+      <id>jena-repo</id>
+      <name>Jena repo</name>
+      <!-- <url>sftp://openjena.org/var/repo</url> -->
+
+      <!-- RC's to snapshot repo -->
+      <url>sftp://openjena.org/var/repo-dev</url>
+      <!-- <url>file:tmp</url> -->
+      <layout>default</layout>
+    </repository> 
+    <snapshotRepository>
+      <id>jena-repo-dev</id>
+      <name>Jena development repo</name>
+      <url>sftp://openjena.org/var/repo-dev</url>
+      <!--<url>file:tmp</url>-->
+      <layout>default</layout>
+    </snapshotRepository>
+  </distributionManagement>
+
 
 </project>
