--- a/pom.xml
+++ b/pom.xml
@@ -2,13 +2,15 @@
 
 <project>
   <modelVersion>4.0.0</modelVersion>
+
   <groupId>com.hp.hpl.jena</groupId>
   <artifactId>arq</artifactId>
   <packaging>jar</packaging>
   <name>ARQ</name>
-  <version>2.8.1-RC-1</version>
-  <description/>
-  <url>http://jena.sf.net/ARQ</url>
+  <version>2.8.1-RC-2</version>
+
+  <description>ARQ is a SPARQL query engine for Jena</description>
+  <url>http://openjena.org/ARQ</url>
 
   <organization>
     <name>Hewlett-Packard</name>
@@ -36,7 +38,7 @@
     <dependency>
       <groupId>com.hp.hpl.jena</groupId>
       <artifactId>jena</artifactId>
-      <version>2.6.2-RC-1</version>
+      <version>2.6.2-RC-2</version>
     </dependency>
 
     <dependency>
@@ -316,7 +318,7 @@ build.time.txt=${build.time.txt}
       <id>repo-jena-dev</id>
       <name>Jena Maven - Development Repository</name>
       <layout>default</layout>
-      <url>http://jena.hpl.hp.com/repo-dev</url>
+      <url>http://openjena.org/repo-dev</url>
       <snapshots>
         <enabled>true</enabled>
       </snapshots>
@@ -324,14 +326,14 @@ build.time.txt=${build.time.txt}
   </repositories>
 
   <distributionManagement>
-    <downloadUrl>http://jena.hpl.hp.com/repo-dev</downloadUrl>
+    <downloadUrl>http://openjena.org/repo-dev</downloadUrl>
 
     <repository>
       <id>jena-repo</id>
       <name>Jena repo</name>
-      <!--<url>sftp://jena.hpl.hp.com/var/repo</url>-->
+      <!--<url>sftp://openjena.org/var/repo</url>-->
       <!-- Because RC's aren't snapshots -->
-      <url>sftp://jena.hpl.hp.com/var/repo-dev</url>
+      <url>sftp://openjena.org/var/repo-dev</url>
       <!--<url>file:tmp</url>-->
       <layout>default</layout>
     </repository> 
@@ -339,7 +341,7 @@ build.time.txt=${build.time.txt}
     <snapshotRepository>
       <id>jena-repo-dev</id>
       <name>Jena development repo</name>
-      <url>sftp://jena.hpl.hp.com/var/repo-dev</url>
+      <url>sftp://openjena.org/var/repo-dev</url>
       <!--<url>file:tmp</url>-->
       <layout>default</layout>
     </snapshotRepository>
