git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/TDB/trunk@1122105 13f79535-47bb-0310-9956-ffa450edef68

--- a/ivysettings.properties
+++ b/ivysettings.properties
@@ -1,3 +1,2 @@
 # Java properties for Ivy
-# See ivysettings.xml -- seem to be able to have one or the other, not both.
-# Set in build.xml tdb.version=
+# Included from ivysettings.xml
