--- a/ivy.xml
+++ b/ivy.xml
@@ -28,7 +28,7 @@
     <!-- rev="latest.integration" -->
     
     <!-- We need the "tests" classifier but we then need to name all the bits we want. -->
-    <dependency org="com.hp.hpl.jena" name="arq" rev="2.8.1-RC-1">
+    <dependency org="com.hp.hpl.jena" name="arq" rev="2.8.1-RC-2">
       <artifact name="arq"/>
       <artifact name="arq" mvn:classifier="tests"/>
       <artifact name="arq" mvn:classifier="javadoc"/>
@@ -38,7 +38,7 @@
     </dependency>    
 
     <!-- Explicit - gets the javadoc and sources : As Jena depends on ARQ there is a (safe) conflict -->
-    <dependency org="com.hp.hpl.jena" name="jena" rev="2.6.2-RC-1">
+    <dependency org="com.hp.hpl.jena" name="jena" rev="2.6.2-RC-2">
       <artifact name="jena"/>
       <artifact name="jena" mvn:classifier="tests"/>
       <artifact name="jena" mvn:classifier="javadoc"/>
@@ -50,18 +50,20 @@
 
     <!-- Necessary for code compilation : configuration main should compile -->
     <dependency org="junit" name="junit" rev="4.5"/>
-    <dependency org="org.slf4j" name="slf4j-api" rev="1.5.8"/>
+    <dependency conf="dev->*" org="org.slf4j" name="slf4j-api" rev="1.5.6"/>
 
     <!-- Additional for development : logging implementation -->
+    <dependency conf="dev->*" org="org.slf4j" name="slf4j-log4j12" rev="1.5.6">
+      <exclude org="log4j" module="log4j"/>
+    </dependency>
 
-    <!-- includes log4j 1.2.13 so depenedency is not necessary-->
-    <!-- What the ivy for "scope"? -->
-    <dependency conf="dev->*" org="org.slf4j" name="slf4j-log4j12" rev="1.5.8"/>
+    <!-- Choose a log4j that works with ivy -->
+    <dependency conf="dev->*"  org="log4j" name="log4j" rev="1.2.13"/>
+
     <!-- Java logging 
     <dependency org="org.slf4j" name="slf4j-jdk14" rev="1.5.6"/>
     -->
 
-    <dependency conf="dev->*"  org="log4j" name="log4j" rev="1.2.13"/> 
 
     <!-- Log4j 1.2.15 referes to inaccessible modules as excluded below. -->
     <!-- Alternative.
