--- a/.classpath
+++ b/.classpath
@@ -15,7 +15,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
 	<classpathentry kind="lib" path="lib/icu4j-3.4.4.jar"/>
 	<classpathentry kind="lib" path="lib/iri-0.7.jar"/>
-	<classpathentry kind="lib" path="lib/jena-2.6.2-RC-1.jar"/>
-	<classpathentry kind="lib" path="lib/jena-2.6.2-RC-1-tests.jar"/>
+	<classpathentry kind="lib" path="lib/jena-2.6.2-tests.jar" sourcepath="lib/jena-2.6.2-test-sources.jar"/>
+	<classpathentry kind="lib" path="lib/jena-2.6.2.jar" sourcepath="lib/jena-2.6.2-sources.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
