--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <artifactId>arq</artifactId>
   <packaging>jar</packaging>
   <name>ARQ</name>
-  <version>2.8.1-RC-2</version>
+  <version>2.8.1</version>
 
   <description>ARQ is a SPARQL query engine for Jena</description>
   <url>http://openjena.org/ARQ</url>
