--- a/pom.xml
+++ b/pom.xml
@@ -41,11 +41,12 @@
        does not depend on ARQ for testing and this creates a loop when ARQ and
        Jena move version together that we can't break.
      -->
+
      <!--
      <dependency>
        <groupId>com.hp.hpl.jena</groupId>
        <artifactId>arq</artifactId>
-       <version>2.8.1</version>
+       <version>RELEAE</version>
        <scope>runtime</scope>
      </dependency>
      -->
@@ -189,7 +190,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-dependency-plugin</artifactId>
         <configuration>
-          <outputDirectory>${basedir}/lib</outputDirectory>
+          <outputDirectory>${project.basedir}/lib</outputDirectory>
           <overWriteReleases>false</overWriteReleases>
           <overWriteSnapshots>true</overWriteSnapshots>
         </configuration>
@@ -225,14 +226,14 @@
             <phase>process-resources</phase>
             <configuration>
               <tasks>
-                <mkdir dir="${basedir}/target"/>
+                <mkdir dir="${project.basedir}/target"/>
                 <tstamp>
                   <format property="build-time.xsd" pattern="yyyy-MM-dd'T'HH:mm:ssZ"/>
                   <format property="build-time.txt" pattern="yyyy-MM-dd HH:mm z"/>
                 </tstamp>
 		<echo message="version=${project.version}"/>
                 <echo message="build.time=${build-time.txt}"/>
-                <copy file="src/main/resources/jena-properties.xml" toFile="${basedir}/target/classes/com/hp/hpl/jena/jena-properties.xml" overwrite="true">
+                <copy file="src/main/resources/jena-properties.xml" toFile="${project.basedir}/target/classes/com/hp/hpl/jena/jena-properties.xml" overwrite="true">
                   <filterset>
                     <filter token="NAME" value="${project.name}"/>
                     <filter token="WEBSITE" value="${project.url}"/>
@@ -320,7 +321,7 @@
         <artifactId>maven-surefire-report-plugin</artifactId>
         <!-- Put surfire report somewhere in the build area -->
         <configuration>
-          <outputDirectory>${basedir}/target/surefire-reports-html</outputDirectory>
+          <outputDirectory>${project.basedir}/target/surefire-reports-html</outputDirectory>
         </configuration>
       </plugin>
       <plugin>
@@ -380,7 +381,7 @@
 
   <repositories>
     <!-- repo-jena is mirrored to Maven central repository -->
-    <!--
+
     <repository>
       <id>repo-jena</id>
       <name>Jena Maven - Repository</name>
@@ -390,7 +391,7 @@
         <enabled>false</enabled>
       </snapshots>
     </repository>
-    -->
+
     <!-- repo-jena-dev is where SNAPSHOTs are published -->  
     <repository>
       <id>repo-jena-dev</id>
@@ -408,9 +409,12 @@
     <repository>
       <id>jena-repo</id>
       <name>Jena repo</name>
-      <url>sftp://openjena.org/var/repo</url>
+
+      <!-- <url>sftp://openjena.org/var/repo</url> -->
+
       <!-- Note: RC aren't snapshots so go to jena-repo -->
-      <!--<url>sftp://openjena.org/var/repo-dev</url>-->
+      <url>sftp://openjena.org/var/repo-dev</url>
+
       <layout>default</layout>
     </repository> 
     <snapshotRepository>
