Could we use <version>[2.8.0,)</version> instead of <version>RELEASE</version>?
git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-CVS/jena2/trunk@1113944 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,9 @@
        Runtime scope also means it must be available at test time.  But Jena
        does not depend on ARQ for testing and this creates a loop when ARQ and
        Jena move version together that we can't break.
+       
+       LATEST or RELEASE do not work, as expected. Perhaps we could use:
+       <version>[2.8.0,)</version>
      -->
 
      <!--
