--- a/pom.xml
+++ b/pom.xml
@@ -44,12 +44,11 @@
        LATEST or RELEASE do not work, as expected. Perhaps we could use:
        <version>[2.8.0,)</version>
      -->
-
      <!--
      <dependency>
        <groupId>com.hp.hpl.jena</groupId>
        <artifactId>arq</artifactId>
-       <version>RELEASE</version>
+       <version>[2.8.1,)</version>
        <scope>runtime</scope>
      </dependency>
      -->
@@ -384,7 +383,7 @@
 
   <repositories>
     <!-- repo-jena is mirrored to Maven central repository -->
-
+    <!-- In case mirroring has not happened yet ... -->
     <repository>
       <id>repo-jena</id>
       <name>Jena Maven - Repository</name>
@@ -413,10 +412,10 @@
       <id>jena-repo</id>
       <name>Jena repo</name>
 
-      <!-- <url>sftp://openjena.org/var/repo</url> -->
+      <url>sftp://openjena.org/var/repo</url>
 
       <!-- Note: RC aren't snapshots so go to jena-repo -->
-      <url>sftp://openjena.org/var/repo-dev</url>
+      <!--<url>sftp://openjena.org/var/repo-dev</url>-->
 
       <layout>default</layout>
     </repository> 
