--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
   <groupId>com.hp.hpl.jena</groupId>
   <artifactId>jena</artifactId>
-  <version>2.6.2</version>
+  <version>2.6.3-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>Jena</name>
