--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <artifactId>arq</artifactId>
   <packaging>jar</packaging>
   <name>ARQ</name>
-  <version>2.8.1</version>
+  <version>2.8.2-SNAPSHOT</version>
 
   <description>ARQ is a SPARQL query engine for Jena</description>
   <url>http://openjena.org/ARQ</url>
@@ -314,6 +314,7 @@ build.time.txt=${build.time.txt}
  <repositories>
 
     <!-- jena-repo is mirrored to Maven central repository -->
+    <!-- In case mirroring has not happened yet ... -->
     <repository>
       <id>repo-jena</id>
       <name>Jena Maven - Repository</name>
@@ -343,10 +344,10 @@ build.time.txt=${build.time.txt}
       <id>jena-repo</id>
       <name>Jena repo</name>
 
-      <!-- <url>sftp://openjena.org/var/repo</url> -->
+      <url>sftp://openjena.org/var/repo</url>
 
       <!-- Because RC's aren't snapshots -->
-      <url>sftp://openjena.org/var/repo-dev</url>
+      <!-- <url>sftp://openjena.org/var/repo-dev</url> -->
 
       <!--<url>file:tmp</url>-->
       <layout>default</layout>
