--- a/.classpath
+++ b/.classpath
@@ -17,9 +17,9 @@
 	<classpathentry kind="lib" path="lib/xercesImpl-2.7.1.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-api-1.5.8.jar" sourcepath="lib/slf4j-api-1.5.8-sources.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-log4j12-1.5.8.jar" sourcepath="lib/slf4j-log4j12-1.5.8-sources.jar"/>
-	<classpathentry kind="lib" path="lib/arq-2.8.1-RC-1-tests.jar"/>
-	<classpathentry kind="lib" path="lib/arq-2.8.1-RC-1.jar"/>
-	<classpathentry kind="lib" path="lib/jena-2.6.2-RC-1-tests.jar"/>
-	<classpathentry kind="lib" path="lib/jena-2.6.2-RC-1.jar"/>
+	<classpathentry kind="lib" path="lib/arq-2.8.1.jar"/>
+	<classpathentry kind="lib" path="lib/jena-2.6.2.jar"/>
+	<classpathentry kind="lib" path="lib/arq-2.8.1-tests.jar"/>
+	<classpathentry kind="lib" path="lib/jena-2.6.2-tests.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
