--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <artifactId>sdb</artifactId>
   <packaging>jar</packaging>
   <name>SDB</name>
-  <version>1.4.0-SNAPSHOT</version>
+  <version>1.3.1-RC-1</version>
   <description/>
   <url>http://openjena.org/SDB</url>
 
@@ -36,24 +36,27 @@
     <dependency>
       <groupId>com.hp.hpl.jena</groupId>
       <artifactId>jena</artifactId>
-      <version>2.6.0</version>
+      <version>2.6.2</version>
     </dependency>
 
     <dependency>
       <groupId>com.hp.hpl.jena</groupId>
-      <artifactId>jenatest</artifactId>
-      <version>2.6.0</version>
+      <artifactId>jena</artifactId>
+      <type>test-jar</type>
+      <version>2.6.2</version>
+      <scope>test</scope>
     </dependency>
 
     <dependency>
       <groupId>com.hp.hpl.jena</groupId>
       <artifactId>arq</artifactId>
-      <version>2.8.1-SNAPSHOT</version>
+      <version>2.8.1</version>
     </dependency>
+
     <dependency>
       <groupId>com.hp.hpl.jena</groupId>
       <artifactId>arq</artifactId>
-      <version>2.8.1-SNAPSHOT</version>
+      <version>2.8.1</version>
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
@@ -100,7 +103,7 @@
     
     <!-- The filter file is written by antrun -->
     <filters>
-      <filter>${basedir}/target/filter.properties</filter>
+      <filter>${project.basedir}/target/filter.properties</filter>
     </filters>
 
     <resources>
@@ -221,17 +224,18 @@
             <phase>generate-resources</phase>
             <configuration>
               <tasks>
-                <mkdir dir="${basedir}/target"/>
+                <mkdir dir="${project.basedir}/target"/>
                 <tstamp>
                   <format property="build.time.xsd"  pattern="yyyy-MM-dd'T'HH:mm:ssZ"/>
                   <format property="build.time.txt"  pattern="yyyy-MM-dd HH:mm Z"/>
                 </tstamp>
-                <echo file="${basedir}/target/filter.properties">
+                <echo file="${project.basedir}/target/filter.properties">
 #begin
 build.time.xsd=${build.time.xsd}
 build.time.txt=${build.time.txt}
 #end
                 </echo>
+		<echo message="version=${project.version}"/>
                 <echo message="build.time=${build.time.txt}"/>
               </tasks>
             </configuration>
@@ -265,27 +269,57 @@ build.time.txt=${build.time.txt}
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-report-plugin</artifactId>
          <configuration>
-         <outputDirectory>${basedir}/target/surefire-reports-html</outputDirectory>
+         <outputDirectory>${project.basedir}/target/surefire-reports-html</outputDirectory>
          </configuration>
          </plugin>
          </plugins>
     -->
   </reporting>
+
+   <repositories>
+
+    <!-- jena-repo is mirrored to Maven central repository -->
+    <!-- In case mirroring has not happened yet ... -->
+    <repository>
+      <id>repo-jena</id>
+      <name>Jena Maven - Repository</name>
+      <layout>default</layout>
+      <url>http://openjena.org/repo</url>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
+
+    <!-- jena-repo-dev is where SNAPSHOTs and RCs are published -->  
+    <repository>
+      <id>repo-jena-dev</id>
+      <name>Jena Maven - Development Repository</name>
+      <layout>default</layout>
+      <url>http://openjena.org/repo-dev</url>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
   
   <distributionManagement>
     <downloadUrl>http://openjena.org/repo-dev</downloadUrl>
     <repository>
       <id>jena-repo</id>
       <name>Jena repo</name>
-      <!-- <url>sftp://openjena.org/var/repo-dev</url> -->
+
+      <!--<url>sftp://openjena.org/var/repo-dev</url>-->
       <url>file:tmp</url>
+
       <layout>default</layout>
     </repository> 
     <snapshotRepository>
       <id>jena-repo-dev</id>
       <name>Jena development repo</name>
-      <!-- <url>sftp://openjena.org/var/repo-dev</url> -->
+
+      <!--<url>sftp://openjena.org/var/repo-dev</url>-->
       <url>file:tmp</url>
+
       <layout>default</layout>
     </snapshotRepository>
   </distributionManagement>
