git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/ARQ/trunk@1122132 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -167,7 +167,7 @@
             <id>attach-sources</id>
             <!-- <phase>package</phase> package is the default -->
             <goals>
-              <!-- Maven v2.2.0 jar-no-fork does not exists 
+              <!-- Maven v2.2.0 jar-no-fork does not exist
                    contrary to the documentation
               -->
               <goal>jar</goal> 
