--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <artifactId>sdb</artifactId>
   <packaging>jar</packaging>
   <name>SDB</name>
-  <version>1.3.1-RC-1</version>
+  <version>1.3.1-RC-2</version>
   <description/>
   <url>http://openjena.org/SDB</url>
 
@@ -147,7 +147,13 @@
               <goal>jar</goal>
             </goals>
           </execution>
-        </executions>
+	  <execution>
+            <id>attach-sources-test</id>
+            <goals>
+              <goal>test-jar</goal>
+            </goals>
+	  </execution>
+	</executions>
       </plugin>
 
       <plugin>
@@ -308,8 +314,9 @@ build.time.txt=${build.time.txt}
       <id>jena-repo</id>
       <name>Jena repo</name>
 
-      <!--<url>sftp://openjena.org/var/repo-dev</url>-->
-      <url>file:tmp</url>
+      <!--<url>sftp://openjena.org/var/repo</url>-->
+      <url>sftp://openjena.org/var/repo-dev</url>
+      <!--<url>file:tmp</url>-->
 
       <layout>default</layout>
     </repository> 
@@ -317,8 +324,8 @@ build.time.txt=${build.time.txt}
       <id>jena-repo-dev</id>
       <name>Jena development repo</name>
 
-      <!--<url>sftp://openjena.org/var/repo-dev</url>-->
-      <url>file:tmp</url>
+      <url>sftp://openjena.org/var/repo-dev</url>
+      <!-- <url>file:tmp</url> -->
 
       <layout>default</layout>
     </snapshotRepository>
